--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -95,7 +95,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=rimpro.pkg2.pkg0.DataToCsv
+main.class=rimpro.pkg2.pkg0.RImPro20
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
